[package]
name = "meta-webdriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive", "env"] }
axum = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-error = "0.2"
color-eyre = "0.6"
futures = "0.3"
hyper = { version = "0.14", features = ["server", "stream", "http2"] }
thirtyfour = "0.28"
caps = "0.5"

[profile.release]
lto = 'fat'
codegen-units = 1
